--- a/gendergy/config.toml
+++ b/gendergy/config.toml
@@ -1,3 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://frugivory.github.io/gendergy/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Gendergy'
+theme = "ananke"
